# yonder

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/brainstorm/: architecture-sketch.md  data-playbook.md  doc-pipeline.md  feature-glossary.md  v1-scope.md
docs/mockups/: README.md  fee-breakdown.html  house-rules.html  reserve-bubbles.html  reserve-trajectory.html
docs/superpowers/plans/: 2026-05-28-strata-extraction-prototype.md  2026-06-04-docs-to-json-reserve-mvp.md  2026-06-04-reserve-outlook-json-to-dashboard.md  2026-06-06-reserve-chart-category-coloring.md  2026-06-06-strata-fee-breakdown.md  2026-06-17-consolidate-extraction-call.md
docs/superpowers/scans/: 2026-06-17-improve.md
docs/superpowers/specs/: 2026-05-28-strata-extraction-prototype-design.md  2026-06-04-docs-to-json-reserve-mvp-design.md  2026-06-04-reserve-trajectory-view-design.md  (+4 more)
fixtures/samples/: expected.json  fee_breakdown.sample.json  generate_sample.py  house_rules.sample.json  reserve_outlook.sample.json
src/yonder/: cli.py
tests/: test_cli.py  test_client.py  test_extract.py  test_fees_cli.py  test_fees_compute.py  test_fees_extract.py  test_fees_extract_live.py  test_fees_fixture_contract.py  test_fees_model.py  test_fees_sample.py  test_fees_schema.py  test_outlook_categories.py  test_outlook_cli.py  test_outlook_fixture_contract.py  test_outlook_model.py  test_outlook_sample.py  test_reserve_assemble.py  test_reserve_extract.py  test_reserve_extract_schema.py  test_schema.py  test_score.py  test_smoke.py  test_strata.py
(+15 files in other folders)
