[project]
name = "yonder"
version = "0.0.1"
description = "BC home-buying companion — strata document extraction prototype"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "reportlab>=4.0",
]

[project.scripts]
yonder = "yonder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yonder"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
